# peregrine

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  index.html  quick_build.sh  search-index.js
aster/: struct.AstBuilder.html
aster/invoke/: trait.Invoke.html
aster/item/: index.html  struct.ItemBuilder.html  struct.ItemConstBuilder.html  struct.ItemEnumBuilder.html  struct.ItemExternCrateBuilder.html  struct.ItemFnBuilder.html  struct.ItemFnDeclBuilder.html  struct.ItemImplBuilder.html  struct.ItemImplItemBuilder.html  struct.ItemImplMethodBuilder.html  struct.ItemMacBuilder.html  struct.ItemStructBuilder.html  struct.ItemTraitBuilder.html  struct.ItemTraitItemBuilder.html  struct.ItemTraitMethodBuilder.html  struct.ItemTraitTypeBuilder.html  struct.ItemTupleStructBuilder.html  struct.ItemTyBuilder.html  struct.ItemUseBuilder.html  struct.ItemUsePathBuilder.html  struct.ItemUsePathListBuilder.html
aster/lifetime/: index.html  struct.LifetimeDefBuilder.html  trait.IntoLifetime.html  trait.IntoLifetimeDef.html
aster/lit/: index.html  struct.LitBuilder.html
aster/mac/: index.html  struct.MacBuilder.html
aster/method/: index.html  struct.MethodSigBuilder.html
aster/name/: index.html  trait.ToName.html
aster/pat/: index.html  struct.PatBuilder.html  struct.PatEnumBuilder.html  struct.PatEnumPathBuilder.html  (+8 more)
aster/path/: index.html  (+6 more)
build_targets/: thumbv7m-none-eabi.json
dynamo/: fn.plugin_registrar.html
peregrine/: fn.main.html  index.html  sidebar-items.js
scripts/: Makefile  build_kcov.sh  ghp_upload.sh  prg_doc_upload.enc
src/: lib.rs
(+246 files in other folders)
