[package]
name = "peregrine"
version = "0.1.0"
authors = ["Zach Marcantel <zmarcantel@gmail.com>"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
dynamo = { git = "https://github.com/austin-suborbitals/dynamo" }

[target.thumbv7m-none-eabi.dependencies.rust-libcore]
git = "https://github.com/hackndev/rust-libcore"

