[package]
name = "peregrine"
version = "0.1.0"
authors = ["Zach Marcantel <zmarcantel@gmail.com>"]

[features]
panic_default = []  # TODO: check sanity of just looping without shutdown of some modules

[dependencies]
dynamo = { git = "https://github.com/austin-suborbitals/dynamo" }

[target.thumbv7em-none-eabi.dependencies.rust-libcore]
git = "https://github.com/hackndev/rust-libcore"
